# covergo-intelligent-underwriting

./: .gitignore  README.md  pyproject.toml  run_server.py
covergo_rag_insure/: main.py
covergo_rag_insure/chunkr-pdf/: chunkr.py
covergo_rag_insure/common/: logger.py
covergo_rag_insure/openai/: axa_underwriting_data_prompt.jsonl  clearn_failed_fine_tunining_job.py  create_fine_tune.py  embeddings.py  verify_fine_tuned_model.py
covergo_rag_insure/routes/: motor_insure.py
covergo_rag_insure/schemas/: motor_insurance.py
covergo_rag_insure/services/: motor_insure.py  openai_service.py
openai-postgres-rag/: faker.ipynb  motor_insurance_hk_data_non_pii.csv  motor_insurance_hk_data_non_pii_114423oct2024.csv  motor_insurance_hk_data_non_pii_114423oct2024_embeddings.csv  openai-postgres-rag.ipynb
