[tool.poetry]
name = "covergo_rag_insure"
version = "0.1.0"
description = ""
authors = ["Son Nguyen <vanson.nguyen@covergo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
openai = "^1.51.2"
pydantic = "^2.9.2"
requests = "^2.32.3"
pymemcache = "^4.0.0"
pandas = "^2.2.3"

[tool.poetry.scripts]
runserver = "run_server:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
